[package]
name = "storage-map"
version = "0.1.0"
authors = ["Dzmitry Malyshau <kvarkus@gmail.com>"]
description = "Concurrent append-only map storage"
documentation = "https://docs.rs/crate/storage-map"
homepage = "https://github.com/kvark/storage-map"
repository = "https://github.com/kvark/storage-map"
keywords = ["hashmap", "map", "concurrent", "lock"]
license = "Apache-2.0"

[dependencies]
lock_api = "0.1"

[dev-dependencies]
parking_lot = "0.6.3"
