[package]
name = "storage-map"
version = "0.3.0"
authors = ["Dzmitry Malyshau <kvarkus@gmail.com>"]
description = "Concurrent append-only map storage"
documentation = "https://docs.rs/crate/storage-map"
homepage = "https://github.com/kvark/storage-map"
repository = "https://github.com/kvark/storage-map"
keywords = ["hashmap", "map", "concurrent", "lock"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
lock_api = "0.4"

[dev-dependencies]
parking_lot = "0.11"
